[package]
name = "cat-breeds-k-means"
version = "0.1.0"
authors = ["dop3ch3f"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-machine = "0.5.4"
rand = "0.7.0"
rand_distr = "0.2.1"
csv = "1.1"
toml = "0.5.5"
serde = { version = "1.0.103", features = ["derive"] }
structopt = "0.3.5"
gnuplot = "0.0.31"